# traveling-salesman-problem

./: pyproject.toml
src/data/: Planilha para caixeiro viajante mercados Uberaba.csv  coords.xlsx  data_prep.py  locations.xlsx
src/interface/: InterfaceGA.py
src/traveling_salesman_problem/: SalesmanProblemGA.py
